--- a/views/chief.html
+++ b/views/chief.html
@@ -34,7 +34,7 @@
     }
     .guwen_ge {
       float: left;
-      margin-right: 13px;
+      margin-right: 5px;
       margin-bottom: 20px;
     }
   </style>
@@ -151,7 +151,7 @@
     ]
     %}
     <div class="dui-layout-con  study-focus" style="width: 1140px;float: none;">
-      <div class="select-country  foucus-public foucus-public-d clearfix" style="margin-left: 0px;width: 1140px;border-bottom: none;">
+      <div class="select-country  foucus-public foucus-public-d clearfix" style="margin-left: 0px;width: 1140px;">
         <p><span>国家及地区：</span></p>
         <ul class="select-list" style="width: 1016px;">
           {% for cItem in countryList %}
