--- a/views/chief.html
+++ b/views/chief.html
@@ -20,6 +20,7 @@
       width: 100%;
       height: 30px;
       background: #f5f5f5;
+      margin-top: 20px;
     }
     .guwen {
       width: 170px;
@@ -163,39 +164,36 @@
   
   <div class="guwen_main"><div class="guwen">首席咨询顾问专区</div></div> 
   <div class="clearfix">
-    <div class="dui-layout-silde guwen_ge">
+    <div class="dui-layout-silde "></div>
       {% import "widget2/community_advisor/community_advisor.html" as community_advisor %}
-      {{ community_advisor.advisor_leave(userinfo,helper,login_info) }}
+      {% for item in top_adviser_list.list %}
+      <div class="guwen_ge">
+        {{ community_advisor.chief_advisor(item,helper,login_info) }}
+      </div>
+      {% endfor %}
     </div>
-    <div class="dui-layout-silde guwen_ge">
-        {% import "widget2/community_advisor/community_advisor.html" as community_advisor %}
-        {{ community_advisor.advisor_leave(userinfo,helper,login_info) }}
-    </div>
-    <div class="dui-layout-silde guwen_ge">
-        {% import "widget2/community_advisor/community_advisor.html" as community_advisor %}
-        {{ community_advisor.advisor_leave(userinfo,helper,login_info) }}
-    </div>
-    <div class="dui-layout-silde guwen_ge">
-        {% import "widget2/community_advisor/community_advisor.html" as community_advisor %}
-        {{ community_advisor.advisor_leave(userinfo,helper,login_info) }}
-    </div>
-    <div class="dui-layout-silde guwen_ge">
-        {% import "widget2/community_advisor/community_advisor.html" as community_advisor %}
-        {{ community_advisor.advisor_leave(userinfo,helper,login_info) }}
-    </div>
-  </div>
-
-  <!-- ===分页器=== -->
-  <div class="pagination-box" data-pagenum="1">
+    <!-- ===分页器=== -->
+    <div class="pagination-box" data-pagenum="1">
       <!--<div class="dui-pagination pagination-large">
       </div>-->
-    {% import "widget2/pagtion/pagtion.html" as pagtion %}
-    {{pagtion.pagtion(pagination)}}
+      {% import "widget2/pagtion/pagtion.html" as pagtion %}
+      {{pagtion.pagtion(pagination)}}
+    </div>
   </div>
+
+  
 </div>
 
-
-
+{% if userinfo.usertype==3 %}
+{% import "widget/new_slide/new_slide.html" as  slide %}
+{{slide.leyu_slide("XC_"+tdk.pagekey+"_SEAT10",helper) }}
+{% elseif userinfo.adviser_type==1 %}
+{% import "widget/new_slide/new_slide3.html" as  slide %}
+{{slide.leyu_slide("XC_"+tdk.pagekey+"_SEAT10",userinfo,login_info,helper) }}
+{% elseif userinfo.adviser_type==2   %}
+{% import "widget/new_slide_yimin/new_slide3.html" as  slide %}
+{{slide.leyu_slide(userinfo,login_info,helper) }}
+{% endif %}
 
 {% include "widget/new_footer/common_footer.html" %}
 <!-- =====活动弹窗===== -->
@@ -217,8 +215,10 @@
 </body>
 
 <script>
-//让分页器居中显示
-$(".pagination-box").css({"marginLeft":"-"+$(".pagination-box").width()/2+"px"});
+$(function(){
+  //让分页器居中显示
+  $(".pagination-box").css({"marginLeft":"-"+$(".pagination-box").width()/2+"px"});
+})
 
 </script>
 </html>
