--- a/views/widget2/community_advisor/community_advisor.html
+++ b/views/widget2/community_advisor/community_advisor.html
@@ -43,7 +43,7 @@
 </div>
 <script>
  $(function(){
-   function  openchat_new(jobnum){
+   function openchat_new(jobnum){
      openJesongChatByCus(1,jobnum)
    }
    $('.expand2').on('click','.expand',function(){
@@ -62,6 +62,79 @@
        $(".tan_tupian").css("display","block");
      }
    })
+ })
+</script>
+{% endmacro %}
+<!-- 首席顾问 -->
+{% macro chief_advisor(advisor, helper,login_info) %}
+<div class="community-advisor dui-box-shadow" style="position: relative">
+  <ul style="height: 40px">
+    <li class="guanzhu">粉丝<span class="guanzhu-num">{{ advisor.fans_count }}</span></li>
+    <li style="width: 135px">文章<span class="article-num">{{ advisor.article_count }}</span></li>
+  </ul>
+  <dl>
+    {#<!--<dt class="advisor-img"><a target="_blank" href="{{helper.urlgen('blog', advisor.uid)}}"><img src="{{helper.avaterimg(advisor.uid, 'small', 0,advisor.version)}}" alt="{{advisor.realname}}" title="{{advisor.realname}}"></a></dt>-->
+    <!-- <div style="position: relative;">
+      <img src="{{helper.cdnhost}}/assets/img/tou_guwen.png" alt="" style="position: absolute;right: 0px;bottom: 0px;width: 34px;height: 34px;">
+    </div> -->#}
+    <dt class="advisor-img" style="background-image: url('{{helper.avaterimg(advisor.uid, 'small', advi,advisor.version)}}');background-position: 0 0;cursor: pointer;"></dt>
+    <dd>
+      <p class="advisor-name" >{{ advisor.realname }}</p>
+      {% if advisor.organid != null %}
+      <p class="advisor-bumen" data-cityId ="{{advisor.organid}}" >金吉列{{ advisor.organid | getCity() }}分公司</p>
+      {% else %}
+      <p class="advisor-bumen" data-cityId ="" >金吉列分公司</p>
+      {% endif %}
+      <p class="advisor-enjoy">{{ advisor.position_name if advisor.position_name else '咨询顾问'
+}}</p>
+    </dd>
+  </dl>
+  <div class="advisor-intro">
+    {% if advisor.introduce.length > 74 %}
+    <p class="expand2" data-tex="{{ advisor.introduce | ellipsis(74) }}">{{ advisor.introduce | ellipsis(74) }}<span class="expand"  data-text="{{ advisor.introduce }}" style="color: #c13232;margin-left: 6px;cursor: pointer">展开全部</span></p>
+    {% else %}
+    <p class="expand1">{{ advisor.introduce }}</p>
+    {% endif %}
+  </div>
+  <div class="advisor-btn {% if login_info.uid ==advisor.uid %}advisor-btn-gray{% endif %}">
+    <a {% if login_info.uid !== advisor.uid %} data-new_job_number="{{ advisor.new_job_number}}" {% endif %}class="advisor-zixun "  rel="nofollow">立即咨询</a>
+    {#{% if advisor.is_follow %}
+      <span class="advisor-guanzhu guanzhu-btn" style="padding: 3px 31px;" data-uid="{{advisor.uid}}">已关注</span>
+    {% else %}
+      <span class="advisor-guanzhu guanzhu-btn" data-uid="{{advisor.uid}}">关注</span>
+    {% endif %}#}  
+  </div>
+{% if advisor.header_avatar_big %}
+  <div class="tan_tupian" style="width: 220px;height: 276px;position: absolute;top: 0;left: 236px;z-index: 999;display: none"><img src="{{ advisor.header_avatar_big }}" alt=""></div>
+{% endif %}
+</div>
+<script>
+ $(function(){
+   //立即咨询
+   $('.advisor-zixun').on("click", openchat_new); 
+   function openchat_new(){
+     var jobnum = $(this).attr('data-new_job_number')
+     openJesongChatByCus(1,jobnum)
+   }
+   $('.expand').on("click", text_show); 
+   function text_show(){
+     var text = $(this).data('text');
+     $('.expand2').html(text+'<span class="expand3" style="color: #c13232;margin-left: 6px;cursor: pointer">收起</span>');
+   }
+   $('.expand3').on("click", text_hide); 
+   function text_hide(){
+     var tex = $(this).parent('.expand2').data('tex');
+     /* $('.expand1').hide();*/
+     $('.expand2').html(tex +'<span class="expand"  data-text="{{ advisor.introduce | nl2br }}" style="color: #c13232;margin-left: 6px;cursor: pointer">展开全部</span>')
+   }
+   $('.advisor-img').on("click", advisor_img); 
+   function advisor_img(){
+     if($(".tan_tupian").css("display")=="block"){
+       $(".tan_tupian").css("display","none");
+     }else{
+       $(".tan_tupian").css("display","block");
+     }
+   }
  })
 </script>
 {% endmacro %}
