文章新增标签

--- a/views/widget/liuxue_item/liuxue_item.html
+++ b/views/widget/liuxue_item/liuxue_item.html
@@ -47,23 +47,32 @@
 {% for floor in shouye %} {#国家#}
 {% set ad_seat_index = loop.index + 10 %}
 {% set targlist = [
-	{ "type":"专业解析" },
-	{ "type":"申请规划" },
+	{ "type":"留学初识" },
+	{ "type":"本科选校" },
+	{ "type":"硕士选校" },
+	{ "type":"留学打工" },
+	{ "type":"本硕连读" },
+	{ "type":"留学时间" },
+	{ "type":"接机住宿" },
+	{ "type":"艺术留学" },
+	{ "type":"QS排名" },
 	{ "type":"留学费用" },
-	{ "type":"留学条件" },
 	{ "type":"大学排名" },
-	{ "type":"行前指导" },
-	{ "type":"就业指导" },
-	{ "type":"签证指导" },
+	{ "type":"留学条件" },
 	{ "type":"留学案例" },
-	{ "type":"院校资讯" },
-	{ "type":"留学方案" },
-	{ "type":"背景提升" },
-	{ "type":"海外生活" },
-	{ "type":"备考资讯" },
+	{ "type":"专业解析" },
+	{ "type":"签证指导" },
+	{ "type":"就业指导" },
+	{ "type":"申请规划" },
+	{ "type":"行前指导" },
+	{ "type":"省钱攻略" },
 	{ "type":"文书准备" },
+	{ "type":"海外生活" },
+	{ "type":"院校资讯" },
+	{ "type":"背景提升" },
+	{ "type":"留学方案" },
 	{ "type":"难点解析" },
-	{ "type":"省钱攻略" }
+	{ "type":"备考资讯" }
 	]
 %}
 <div class="lxContaniner" style="overflow:hidden" id="country{{floor.country_id}}">
