--- a/views/release_article.html
+++ b/views/release_article.html
@@ -148,22 +148,31 @@
               </label>
               <div class="recommend-tag" >
                 {% set recommendList = [
-                {'name':'专业解析','val':'专业解析'},
-                {'name':'申请规划','val':'申请规划'},
-                {'name':'留学费用','val':'留学费用'},
-                {'name':'留学条件','val':'留学条件'},
-                {'name':'大学排名','val':'大学排名'},
-                {'name':'行前指导','val':'行前指导'},
-                {'name':'就业指导','val':'就业指导'},
-                {'name':'签证指导','val':'签证指导'},
-                {'name':'院校资讯','val':'院校资讯'},
-                {'name':'留学方案','val':'留学方案'},
-                {'name':'背景提升','val':'背景提升'},
-                {'name':'海外生活','val':'海外生活'},
-                {'name':'备考资讯','val':'备考资讯'},
-                {'name':'文书准备','val':'文书准备'},
-                {'name':'难点解析','val':'难点解析'},
-                {'name':'省钱攻略','val':'省钱攻略'}
+                      { "name":"留学初识","val":"留学初识" },
+                      { "name":"本科选校","val":"本科选校" },
+                      { "name":"硕士选校","val":"硕士选校" },
+                      { "name":"留学打工","val":"留学打工" },
+                      { "name":"本硕连读","val":"本硕连读" },
+                      { "name":"留学时间","val":"留学时间" },
+                      { "name":"接机住宿","val":"接机住宿" },
+                      { "name":"艺术留学","val":"艺术留学" },
+                      { "name":"QS排名","val":"QS排名" },
+                      { "name":"留学费用","val":"留学费用" },
+                      { "name":"大学排名","val":"大学排名" },
+                      { "name":"留学条件","val":"留学条件" },
+                      { "name":"专业解析","val":"专业解析" },
+                      { "name":"签证指导","val":"签证指导" },
+                      { "name":"就业指导","val":"就业指导" },
+                      { "name":"申请规划","val":"申请规划" },
+                      { "name":"行前指导","val":"行前指导" },
+                      { "name":"省钱攻略","val":"省钱攻略" },
+                      { "name":"文书准备","val":"文书准备" },
+                      { "name":"海外生活","val":"海外生活" },
+                      { "name":"院校资讯","val":"院校资讯" },
+                      { "name":"背景提升","val":"背景提升" },
+                      { "name":"留学方案","val":"留学方案" },
+                      { "name":"难点解析","val":"难点解析" },
+                      { "name":"备考资讯","val":"备考资讯" }
                 ]  %}
                 {% for item in recommendList%}
                   <span class="recommend-sel" data-str="{{item.name}}" >
@@ -469,23 +478,32 @@
       }
       editor.create();
       var taglist=[
-            {'name':'专业解析','val':'专业解析'},
-            {'name':'申请规划','val':'申请规划'},
-            {'name':'留学费用','val':'留学费用'},
-            {'name':'留学条件','val':'留学条件'},
-            {'name':'大学排名','val':'大学排名'},
-            {'name':'行前指导','val':'行前指导'},
-            {'name':'就业指导','val':'就业指导'},
-            {'name':'签证指导','val':'签证指导'},
-            {'name':'院校资讯','val':'院校资讯'},
-            {'name':'留学方案','val':'留学方案'},
-            {'name':'背景提升','val':'背景提升'},
-            {'name':'海外生活','val':'海外生活'},
-            {'name':'备考资讯','val':'备考资讯'},
-            {'name':'文书准备','val':'文书准备'},
-            {'name':'难点解析','val':'难点解析'},
-            {'name':'省钱攻略','val':'省钱攻略'},
-            {'name':'留学案例','val':'留学案例'}
+          { "name":"留学初识","val":"留学初识" },
+          { "name":"本科选校","val":"本科选校" },
+          { "name":"硕士选校","val":"硕士选校" },
+          { "name":"留学打工","val":"留学打工" },
+          { "name":"本硕连读","val":"本硕连读" },
+          { "name":"留学时间","val":"留学时间" },
+          { "name":"接机住宿","val":"接机住宿" },
+          { "name":"艺术留学","val":"艺术留学" },
+          { "name":"QS排名","val":"QS排名" },
+          { "name":"留学费用","val":"留学费用" },
+          { "name":"大学排名","val":"大学排名" },
+          { "name":"留学条件","val":"留学条件" },
+          { "name":"留学案例","val":"留学案例" },
+          { "name":"专业解析","val":"专业解析" },
+          { "name":"签证指导","val":"签证指导" },
+          { "name":"就业指导","val":"就业指导" },
+          { "name":"申请规划","val":"申请规划" },
+          { "name":"行前指导","val":"行前指导" },
+          { "name":"省钱攻略","val":"省钱攻略" },
+          { "name":"文书准备","val":"文书准备" },
+          { "name":"海外生活","val":"海外生活" },
+          { "name":"院校资讯","val":"院校资讯" },
+          { "name":"背景提升","val":"背景提升" },
+          { "name":"留学方案","val":"留学方案" },
+          { "name":"难点解析","val":"难点解析" },
+          { "name":"备考资讯","val":"备考资讯" }
         ];
       $('#sureBtn').on('click',surePublish); //发布文章
       $("#save-draft").on("click",savePublish); //保存草稿箱
