--- a/views/release_article.html
+++ b/views/release_article.html
@@ -256,6 +256,7 @@
   <script >
     $(function(){
       var pdfList = JSON.parse($('.assistant-cont').attr('data-pdf'))|| [];
+      console.log('pdf',pdfList)
       if (window.ActiveXObject || "ActiveXObject" in window) {
         //判断是否为IE浏览器，"ActiveXObject" in window判断是否为IE11 // 下面代码都是处理IE浏览器的情况 
         //判断是否安装了adobe Reader
