--- a/views/widget/liuxue_item/liuxue_item.html
+++ b/views/widget/liuxue_item/liuxue_item.html
@@ -3,7 +3,7 @@
 .lx-head{margin-bottom:20px;padding-bottom:10px;height:27px;border-bottom:solid 1px #dcdcdc;}
 .lx-head h1{float:left;margin-right:80px;color:#333;font-size:22px}
 .lx-tabitems{float:left;margin-top:5px}
-.lx-tabitems li{position:relative;float:left;color:#666;margin-right:14px;text-align:center;font-size:12px;cursor:pointer}
+.lx-tabitems li{position:relative;float:left;color:#666;margin-right:14px;text-align:center;font-size:14px;cursor:pointer}
 .lx-tabitems li.active{color:#c13232;font-size: 14px;}
 .lx-tabitems li:first-child{margin-right: 25px;}
 .lx-tabitems li.active em{position:absolute;bottom:-14px;left:0;display:block;width:100%;height:2px;background:#c13232}
@@ -27,16 +27,16 @@
 #guItems li:nth-child(3) .gw-people{margin-left: 26px;}
 .home-guanggao a{float: left;margin-right: 20px;background-color: #dcdcdc;}
 #guItems li{ color: #c13232;}
-.lx-head a{ font-size: 12px;color: #c13232;float: left;margin-top: 5px}
-.lx-head .enter{ font-size: 12px;color: #c13232;float: right;margin-top: 5px}
+.lx-head a{ font-size: 14px;color: #c13232;float: left;margin-top: 5px}
+.lx-head .enter{ font-size: 16px;color: #c13232;float: right;margin-top: 5px;font-weight: bold;}
 .lx-hovertarg{ float: left;font-size: 0; position: relative; }
 .lx-hovertarg li{ display: inline-block; margin-right: 14px; *float: left}
-.lx-hovertarg li a{font-size: 12px;color: #999;	transition: .2s ease;-webkit-transition: .2s ease;}
+.lx-hovertarg li a{font-size: 14px;color: #999;	transition: .2s ease;-webkit-transition: .2s ease;}
 .lx-hovertarg > li a:hover{color: #c13232;font-weight: bold;transform: scale(1.1);-webkit-transform: scale(1.1);}
-.lx-hovertarg .slide-icon,.lx-hovertarg .slide-toggle-icon {display: inline-block;height: 12px;width: 12px;background: url(../assets/img/home-icon.png) no-repeat;background-position: 0 -7px;cursor: pointer;}
-.lx-hovertarg .slide-toggle-icon{background: url(../assets/img/icon_toggle.png) no-repeat;}
-.slide-menu{ position: absolute; width: 795px; min-height: 43px; background: #fff;box-shadow: 1px 2px 5px rgba(61, 55, 55, 0.26);left:-215px;top:37px;z-index: 5;padding-bottom: 12px;display:none;}
-.slide-menu li{ margin-left: 25px; margin-right: 25px;margin-top: 12px;}
+.lx-hovertarg .slide-icon,.lx-hovertarg .slide-toggle-icon {position: absolute;top:2px;height: 24px;width: 24px;background: url(../assets/img/home-icon.png) no-repeat;background-position: center;background-size:100%;cursor: pointer;}
+.lx-hovertarg .slide-toggle-icon{background: url(../assets/img/icon_toggle.png) no-repeat;background-position: center;background-size:100%;}
+.slide-menu{ position: absolute; width: 851px; min-height: 43px; background: #fff;box-shadow: 1px 2px 5px rgba(61, 55, 55, 0.26);left:-215px;top:37px;z-index: 5;padding-bottom: 12px;display:none;}
+.slide-menu li{ margin-left: 19px; margin-right: 19px;margin-top: 12px;}
 .slide-menu li a:hover{ color: #c13232; text-decoration: underline;}
 #guItems .atities-top{position:absolute;top:65px;}
 .atities{color: #333;font-size: 16px;text-indent: 20px;display: block;position: absolute;top: 57px;}
