--- a/views/widget/new_nav_first/new_nav_first.css
+++ b/views/widget/new_nav_first/new_nav_first.css
@@ -25,7 +25,7 @@ form, input {
 .new_nav_first .new-logo-left{
     height: 62px;
     float: left;
-
+    margin-right: 40px;
 }
 .new_nav_first .new-logo-left img{
     display: block;
@@ -33,29 +33,39 @@ form, input {
     margin-top: 10px;
 }
 .new_nav_first .page-type{
-    width: 460px;
+    width: 542px;
     margin-top: 26px;
     float: left;
 }
-.new_nav_first .page-type li{
+.new_nav_first .page-type .type-nav{
     float: left;
-    margin-left: 60px;
-    width: 78px;
     height: 28px;
-    -webkit-border-radius: 15px;
-    -moz-border-radius: 15px;
-    border-radius: 15px;
+    -webkit-border-radius: 60px;
+    -moz-border-radius: 60px;
+    border-radius: 60px;
     text-align: center;
     line-height: 28px;
     background-color: #fff;
-    border: 1px solid #C13232;
+    border: 1px solid #fff;
+}
+.new_nav_first .page-type .type-nav.small-nav {
+    width: 74px;
+}
+.new_nav_first .page-type .type-nav.middle-nav {
+    width: 110px;
+}
+.new_nav_first .page-type .type-nav.big-nav {
+    width: 128px;
+    margin-right: 0;
 }
 .new_nav_first .page-type li.active{
     background-color: #C13232;
+    border: 1px solid #c13232;
+    color: #fff;
 }
 .new_nav_first .page-type li a{
-    color: #C13232;
     font-size: 18px;
+    color: #333;
 }
 .new_nav_first .page-type li.active a{
     color: #fff;
@@ -65,6 +75,7 @@ form, input {
 }
 .new_nav_first .nav-right{
     float: right;
+    width: 438px;
 }
 .new_nav_first .new-city{
     float:left;
@@ -73,7 +84,7 @@ form, input {
     cursor: pointer;
 }
 .new_nav_first .new-city .citynames {
-    width:122px;
+    /* width:122px; */
     height: 82px;
     text-align: right;
     line-height: 82px;
@@ -265,7 +276,7 @@ form, input {
 }
 /*搜索*/
 .new_nav_first .nav-right .new-searchs{
-    width: 350px;
+    width: 326px;
     height: 30px;
     position: relative;
     z-index: 2; /*热门搜索签儿盖住轮播图*/
@@ -333,7 +344,7 @@ form, input {
     outline-style: none;
 }
 .new_nav_first .new-home-search .text-nav{
-    width: 245px;
+    width: 223px;
     height: 28px;
     line-height: 28px;
     border:1px solid #dcdcdc;
