--- a/public/assets/css/article_detail.css
+++ b/public/assets/css/article_detail.css
@@ -34,7 +34,7 @@
   line-height: 18px;
   color:#c13232;
   padding-top:20px;
-  padding-bottom: 16px;
+  padding-bottom: 10px;
   float:left;
 }
 .art-tag{
@@ -61,11 +61,53 @@
   color:#c13232;
   line-height: 24px;
 }
+.detail-info-bar {
+  width: 100%;
+}
 .adviser-case-detail-come{
-  font-size:12px;
+  float: left;
+  font-size:0;
   line-height: 12px;
   color:#666;
-  padding-bottom:16px;
+  padding-top: 10px;
+  padding-bottom:19px;
+  line-height: 1;
+}
+.adviser-case-detail-come span {
+  font-size: 12px;
+  display: inline-block;
+  margin-right: 20px;
+}
+.connect-info {
+  float: right;
+  font-size: 0px;
+  height: 24px;
+  margin-top: 4px;
+}
+.connect-info img {
+  vertical-align: super;
+  margin-right: 10px;
+  position: relative;
+  top: 3px;
+}
+.connect-info .zixun-info {
+  font-size: 12px;
+  color: #666;
+}
+.connect-info .zixun-phone {
+  font-size: 14px;
+  color: #333;
+}
+.connect-info .zixun-btn {
+  display: inline-block;
+  width: 76px;
+  height: 24px;
+  text-align: center;
+  line-height: 24px;
+  background-color: #c13232;
+  color: #fff;
+  font-size: 14px;
+  margin-left: 20px;
 }
 .adviser-case-detail-offer{
   border-top:1px solid #dcdcdc;
