--- a/views/widget/new_nav_first/new_nav_first.css
+++ b/views/widget/new_nav_first/new_nav_first.css
@@ -28,7 +28,7 @@ form, input {
     margin-right: 40px;
 }
 .new_nav_first_red .new_nav_first .new-logo-left {
-    margin-right: 35px;
+    margin-right: 30px;
 }
 .new_nav_first .new-logo-left img{
     display: block;
@@ -66,8 +66,8 @@ form, input {
     border: 1px solid #c13232;
 }
 .new_nav_first_red .new_nav_first .page-type li.active{
-    background-color: #fff;
-    border: 1px solid #fff;
+    background-color: #a31212;
+    border: 1px solid #a31212;
 }
 .new_nav_first .page-type li a{
     font-size: 18px;
@@ -81,7 +81,7 @@ form, input {
     color: #fff;
 }
 .new_nav_first_red .new_nav_first .page-type li.active a{
-    color: #c13232;
+    color: #fff;
 }
 .new_nav_first .page-type{
     float: left;
