--- a/views/widget2/community_nav/community_nav.html
+++ b/views/widget2/community_nav/community_nav.html
@@ -32,10 +32,10 @@ set adviserNav = [
       <a href="{{helper.urlgen(userinfo.uid | string, item.nav_url_type)}}" class="community-nav-list">{{item.nav_name}}</a>
       {% endif %}
     {% endfor %}
-    <div class="nav-phone">
-      <span class="phone-bg"><i class="iconfont">&#xe618;</i></span>
-      <span class="community-zixun" >留学咨询热线：</span>
-      <span class="community-tel">{{ userinfo.tel }}</span>
+    <div class="connect-info">
+      <img src="{{helper.cdnhost}}/assets/img/main_icon_phone.png" alt="">
+      <span><i class="zixun-info">留学咨询热线</i><i class="zixun-phone">：{{userinfo.tel}}</i></span>
+      <span class="zixun-btn" onclick="openchat_new('{{ userinfo.new_job_number}}')">立即咨询</span>
     </div>
   </div>
 {% endmacro %}
