--- a/views/widget/so_article/so_article.html
+++ b/views/widget/so_article/so_article.html
@@ -1,4 +1,3 @@
-
 <div class="result-item clearfix">
     <div class="item-adviser">
         <a target="_blank" href="{{helper.urlgen(item.user_info.uid | string)}}"><div class="adviser-avatar" style="background-image: url({{helper.avaterimg(item.user_info.uid, 'small', item.user_info.status,item.user_info.version)}})"></div><div class="adviser-info"><span>{{item.user_info.realname | shorten(6)}}</span><img src="{{helper.cdnhost}}/assets/img/1v.png" alt="" class="flag"/></div></a>
@@ -8,11 +7,11 @@
             <a target="_blank" class="info-title" href="{{helper.urlgen('case',item.id | string) if item.type == 1 else helper.urlgen('article',item.id | string)}}">{{item.title}}</a>
             <div class="info-tags">
                 {% if item.tag_list %}
-                <span>{{item.tag_list}}</span>
+                <span class="tag article-tag">{{item.tag_list}}</span>
                 {% endif %}
             </div>
         </div>
-        <div class="info-desc">{{item.introduce|ellipsis(90)}}<a target="_blank" href="{{helper.urlgen('case',item.id | string) if item.type == 1 else helper.urlgen('article',item.id | string)}}">【查看详情】</a></div>
+        <div class="info-desc clearfix">{{item.introduce|ellipsis(90)}}<a target="_blank" href="{{helper.urlgen('case',item.id | string) if item.type == 1 else helper.urlgen('article',item.id | string)}}">【查看详情】</a></div>
         <div class="time">{{item.add_time | getDefaultFormat('YYYY-MM-DD HH:mm:ss')}}</div>
     </div>
 </div>
